--- a/build
+++ b/build
@@ -2,7 +2,7 @@
 
 EXEC_PATH="$1"
 
-cd ~/.config/xmonad
+cd ~/Projects/xmonad-quark
 stack install
 ln -sf ~/.local/bin/xmonad $EXEC_PATH
 cp scripts/* ~/.scripts
