--- a/stack.yaml
+++ b/stack.yaml
@@ -17,7 +17,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-18.28
+resolver: lts-19.17
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -38,9 +38,9 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
-extra-deps:
-  - xmonad-0.17.0
-  - xmonad-contrib-0.17.0
+#extra-deps:
+#  - xmonad-0.17.0
+#  - xmonad-contrib-0.17.0
 #
 # Override default flag values for local packages and extra-deps
 #flags: []
